# PacketSniffer

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/core/: SnifferCore.cpp  SnifferCore.h
src/parser/: PacketParser.cpp  PacketParser.h
src/ui/: Colores.h  UIManager.cpp  UIManager.h
